<resources>
    <string name="file_provider_name" translatable="false">.fileProvider</string>
    <string name="select_capture_image">Please select or capture image</string>
    <string name="app_name">Jobloyal</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="timebaseUnitType">Time Base</string>
    <string name="numeric">Numeric</string>
    <string name="pleaseComplete">please Complete all fields</string>
    <string name="selectAvatar">please choose an avatar for your self</string>
    <string name="selectUnitType">please select one of type of units</string>
    <string name="typePriceGreaterThanZero">please type price of service greater than zero</string>
    <string name="selectUnit">please select one of units or type your custom unit</string>
    <string name="per">per</string>
    <string name="hour">hour</string>
    <string name="mins">min</string>
    <string name="nServices">%s Services</string>
    <string name="lastOnlineAt">Last online at %s</string>
    <string name="todayOnlineAt">today be online at %s</string>
    <string name="notBeenOnlineToday">job not been active today</string>
    <string name="atLeastOneSelection">you should at least accept one service of this request</string>
    <string name="routingTO">Routing to %s</string>
    <string name="cannotToBack">You Cannot go back till this request completely finished or canceled</string>
    <string name="selectBirthday">Select Your Birthday</string>
    <string name="commentTitle">about %s</string>
    <string name="defaultDescriptionUpdate">update of new version application is available and you can download it now</string>
    <string-array name="titleOfIntros">
        <item>Are you looking for services?</item>
        <item>Do you want to provide a service?</item>
    </string-array>
    <string-array name="contentOfIntros">
        <item>- Get your house work done with ease\n- Find a service provider close to you\n- One app, tenths of services in your area</item>
        <item>- Gain clients more easily in your area\n- Increase your visibility and boost your income\n- Join Jobbers’ network to provide your services safely</item>
    </string-array>
    <string name="resendWithTimer">Resend (%d)</string>
    <string name="resend">Resend</string>
    <string name="exit">Exit</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="exitSubTitle">are you sure to exiting from app?</string>
    <string name="exitDescription">every time you can comeback to app and you\'r data is protected by jobloyal</string>
    <string name="deleteAccountSubTitle">are you sure to deleting your account?</string>
    <string name="deleteAccountDescription">if you delete your account all history will be deleted and can not be recoverd</string>
    <string name="jobs">Jobs</string>
    <string name="requests">Requests</string>
    <string name="history">Report</string>
    <string name="profile">Profile</string>
    <string name="editProfile">EDIT PROFILE</string>
    <string name="selectYourSkillCategory">Select Your Skill’s Category</string>
    <string name="selectYourSkill">Select Your Skill</string>
    <string name="rejectWithTimer">Reject (%s)</string>
    <string name="acceptWithPrice">Next (%s)</string>
    <string name="next">Next</string>
    <string name="reject">Reject</string>
    <string name="holdToCancel">please hold \'Cancel\' Button to cancel request</string>
    <string name="startService">i Started Service(s)</string>
    <string name="finishService">i Finished Service(s)</string>
    <string name="arrivalTime">Arrival Time</string>
    <string name="arrivedTime">Arrived Time</string>
    <string name="startedTime">Started Time</string>
    <string name="startedService">Started Service</string>
    <string name="accepted">accepted</string>
    <string name="rejected">rejected</string>
    <string name="lastUpdatedAt">Last Update at %s</string>
    <string name="updateYourLocation">Please update your location to users near you find you</string>
    <string name="turnOnYourGPS">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fromNComment">From %s</string>
    <string name="workCount">%s Worked</string>
    <string name="rateAndComment">%s (%s comments)</string>
    <string name="servicesSelectedCount">%d Service(s) select to reserve</string>
    <string name="chooseArrivalTime">please select arrival time to continue</string>
    <string name="askMr">Ask %s</string>
    <string name="askMrContent">Ask %s to open the jobloyal and verify your job to get the money on your wallet</string>
    <string name="cancelWithTimer">Cancel (%s)</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deleteServiceInJobSubtitle">are you sure delete %s from your job?</string>
    <string name="deleteServiceInJobDescription">deleting this service cause all comment about it and rate whole deleted do you want to continue?</string>
    <string name="payForAnHour">Pay for an Hour</string>
    <string name="wrongIBAN">Please Write Correct IBAN Number</string>
    <string name="daily">Every Other Day</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yourAccountFinitelySuspended">your account has been suspended till %s because %s</string>
    <string name="yourAccountFinitelySuspendedWithoutReason">your account has been suspended till %s</string>
    <string name="yourAccountInfinitelySuspended">your account has been suspended because %s</string>
    <string name="yourAccountInfinitelySuspendedWithoutReason">your account has been suspended</string>
    <string name="localNotificationContent">If you want to be a jobloyal service recipient today, you need to switch jobs online</string>
    <string name="localNotificationTitle">Get your job online</string>
    <string-array name="profileOptions">
        <item>Payment</item>
        <item>Notifications</item>
        <item>Edit Profile</item>
        <item>Turnover</item>
        <item>Support</item>
        <item>Terms and Conditions</item>
        <item>About Us</item>
        <item>Logout</item>
    </string-array>
    <string name="titleOfCategoryBox">What Work Do you Need?</string>
    <string name="titleOfServiceSearch">Services Result</string>
    <string name="nRequestedServices">%s services</string>
    <string name="cancelRequestUserSubTitle">are you sure cancel jobber?</string>
    <string name="cancelRequestUserContent">if you cancel this jobber may couldn\'t take jobber or it was hard, you sure?</string>
    <string name="rateIsRequire">you should at least rate the jobber without comment</string>
    <string name="reservedJobberFornMin">we reserved jobber for %d minute</string>
    <string-array name="userProfileOptions">
        <item>Reserved Services</item>
        <item>Canceled Services</item>
        <item>Edit Profile</item>
        <item>Support</item>
        <item>Terms and Conditions</item>
        <item>About Us</item>
        <item>Logout</item>
    </string-array>
    <string name="error401_title">you not authorized yet</string>
    <string name="error401_description">you have not authorized may your token has suspend</string>
    <string name="error500_title">an internal error occurred</string>
    <string name="error500_description">we are solving this error as soon as possible</string>
    <string name="error404_title">not found</string>
    <string name="error404_description">this request not found</string>
    <string name="error_internet_lose_title">internet has lose</string>
    <string name="error_internet_lose_description">please check your connection and try again</string>
    <string name="error_code_id_should_not_empty">id should be more than 3 character</string>
    <string name="error_all_field_should_complete">all fields should complete</string>
    <string name="error_accept_terms">please accept terms and condition to continue</string>
    <string name="error_id_should_complete">please choose an correct id</string>
    <string name="no_connection">NO CONNECTION</string>
    <string name="please_check_you_connection_and_try_again">Please check you connection and try again</string>
    <string name="try_again">Try Again</string>
    <string name="your_request_sent">your request sent</string>
    <string name="wait">Wait</string>
    <string name="jobloyal_sent_your_request_to_the_jobber_please_wait_until_jobber_answer_the_request">jobloyal sent your request to the jobber please wait until jobber answer the request</string>
    <string name="cancel_the_request">Cancel The Request</string>
    <string name="your_account_is_suspend">Your account is suspend</string>
    <string name="loading_detail">loading detail...</string>
    <string name="your_i_dentity">Your IDentity</string>
    <string name="raiting">Rating</string>
    <string name="write_your_comment_here">write your comment here…</string>
    <string name="submit">Submit</string>
    <string name="submiting">Submitting…</string>
    <string name="profile_cap">PROFILE</string>
    <string name="wallet">Wallet</string>
    <string name="chf">CHF</string>
    <string name="find_my_jobs_here">Find My Jobs Here</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="payable_amount">payable amount:</string>
    <string name="total_pay">Total Pay</string>
    <string name="sum_and_commission">sum + commission</string>
    <string name="sum_and_commission_cap">Sum + Commission</string>
    <string name="what_do_this_step">What do this step?</string>
    <string name="step_pay_description">in this step you should choose amount of each services that have an unit like a painting taht have meter unit?</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="please_enter_your_first_name">Please Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="save_cap">SAVE</string>
    <string name="comments">COMMENTS</string>
    <string name="what_work_do_you_need">What Work Do You Need?</string>
    <string name="whats_your_job">What’s your job?</string>
    <string name="turnover">TURNOVER</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="not_found_any_turnover">not found any turnover</string>
    <string name="terms_and_condition">TERMS AND CONDITION</string>
    <string name="messages">MESSAGES</string>
    <string name="accepted_services">Accepted Services</string>
    <string name="total_income">Total Income</string>
    <string name="sum_of_accepted_services_price">sum of accepted services’ price</string>
    <string name="rejected_services">Rejected Services</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="your_message_has_been_replaied_maximum_3_days_later_after_your_sending">your message has been replaied maximum 3 days later after your sending.</string>
    <string name="add_new_service">ADD NEW SERVICE</string>
    <string name="cleaning_the_garden">Cleaning The Garden</string>
    <string name="unit_type">Unit Type</string>
    <string name="select">Select</string>
    <string name="unit_title">Unit Title</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="pay_attention_add_service">pay attention: that when you choose unit type numberic the user have to select amount of service per unit but in timic type user only select the service and pay after finished your work </string>
    <string name="verification">Verification</string>
    <string name="change">(change)</string>
    <string name="enter_sixdigit_code_was_sent">Enter six-digit code was sent</string>
</resources>