<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_jobs"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/jobs"
        android:icon="@drawable/ic_jobber_jobs"/>

    <item
        android:id="@+id/navigation_requests"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/requests"
        android:icon="@drawable/ic_jobber_requests"/>


    <item
        android:id="@+id/navigation_report"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/history"
        android:icon="@drawable/ic_jobber_report"/>

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/profile"
        android:icon="@drawable/ic_navigation_jobber_profile"/>

</menu>