<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".jobber.category.CategoryFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                android:background="?selectableItemBackgroundBorderless"
                app:tint="#1E1E1E" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/add_new_service"
                android:textColor="#1E1E1E"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">
            <TextView
                android:id="@+id/serviceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cleaning_the_garden"
                android:fontFamily="@font/lato_bold"
                android:textSize="19.2sp"
                android:textColor="#383838"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/unit_type"
                android:textColor="#E3404040"
                android:textSize="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/unitTypeEt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="0dp"
                app:boxStrokeColor="@color/text_input_layout_stroke_color"
                app:hintEnabled="false">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/select"
                    android:inputType="none"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/unit_title"
                android:textColor="#E3404040"
                android:textSize="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/unitTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="0dp"
                app:boxStrokeColor="@color/text_input_layout_stroke_color"
                app:hintEnabled="false">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:inputType="text"
                    android:lines="1"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/price"
                android:textColor="#E3404040"
                android:textSize="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="0dp"
                app:boxStrokeColor="@color/text_input_layout_stroke_color"
                app:prefixText="CHF"
                app:suffixText="Per Unit"
                app:hintEnabled="false">



                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.jobloyal.custom.views.NextButton
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="18dp"
                android:layout_gravity="left"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otplayout"
                app:rv_backgroundColor="@color/blue_button"
                app:rv_backgroundPressColor="@color/blue_button_pressed"
                app:rv_cornerRadius="120dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/lato_bold"
                    android:paddingHorizontal="35dp"
                    android:paddingVertical="15dp"
                    android:text="@string/add"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    app:drawableTint="#fff" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:indeterminateTint="#fff"
                    android:paddingHorizontal="19dp"
                    android:paddingVertical="9dp"
                    android:progressTint="#fff"
                    app:indicatorColor="#333"
                    app:tint="#333" />


            </com.jobloyal.custom.views.NextButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:layout_marginTop="20dp"
                android:lineHeight="21dp"
                android:text="@string/pay_attention_add_service"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>