<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noConnectionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:adjustViewBounds="true"
        android:alpha="0.034"
        app:srcCompat="@drawable/ic_logo_jobloyal_waiting"
        app:tint="#3B87F0" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/imageFilterView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_no_connection"
            android:alpha="0.7"/>

        <TextView
            android:id="@+id/title_label_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/no_connection"
            android:fontFamily="@font/lato_bold"
            android:textColor="#000"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/des_label_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:text="@string/please_check_you_connection_and_try_again"
            android:fontFamily="@font/lato_regular"
            android:textColor="#878787" />

        <com.vks.RoundButton
            android:id="@+id/refreshDataBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:rv_backgroundColor="@color/blue_700"
            android:textColor="#fff"
            android:fontFamily="@font/lato_bold"
            android:paddingHorizontal="30dp"
            android:paddingVertical="13dp"
            app:rv_cornerRadius="10dp"
            android:textSize="17sp"
            android:text="@string/try_again" />
    </LinearLayout>
</FrameLayout>