<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.phonenumber.PhoneNumberFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">


        <TextView
            android:id="@+id/titlePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/verification"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneNumberTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:text="41_861_555_99_32"
                android:textColor="#E3404040"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/changeNumberTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/change"
                android:textColor="#E3466EB6" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/enter_sixdigit_code_was_sent"
            android:textColor="#E3404040"
            android:textSize="16dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/otplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.mukesh.OtpView
            android:id="@+id/otpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusedByDefault="true"
            android:fontFamily="@font/lato_bold"
            android:inputType="number"
            android:itemBackground="#ffffff"
            android:textColor="#333333"
            android:textSize="28sp"
            app:OtpCursorColor="@color/blue_button"
            app:OtpItemCount="6"
            app:OtpItemHeight="55dp"
            app:OtpItemWidth="47dp"
            app:OtpLineColor="#EAEAEA"
            app:OtpViewType="rectangle" />
    </LinearLayout>

    <com.jobloyal.custom.views.NextButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otplayout"
        app:rv_backgroundColor="@color/blue_button"

        app:rv_backgroundPressColor="@color/blue_button_pressed"
        app:rv_cornerRadius="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableRight="@drawable/ic_right_arrow"
            android:drawablePadding="10dp"
            android:fontFamily="@font/lato_bold"
            android:paddingHorizontal="19dp"
            android:paddingVertical="14dp"
            android:text="@string/next"
            android:textColor="#fff"
            android:textSize="16sp"
            app:drawableTint="#fff" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateTint="#fff"
            android:paddingHorizontal="19dp"
            android:paddingVertical="9dp"
            android:progressTint="#fff"
            app:indicatorColor="#333"
            app:tint="#333" />


    </com.jobloyal.custom.views.NextButton>

    <TextView
        android:id="@+id/resendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/lato_bold"
        android:paddingHorizontal="19dp"
        android:paddingVertical="14dp"
        android:text="@string/resend"
        android:layout_marginLeft="30dp"
        android:textColor="@color/disabled_button_background"
        android:textSize="16sp"
        app:drawableTint="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nextButton" />
</androidx.constraintlayout.widget.ConstraintLayout>